--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
           </h2>
           <p class="mp">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte
           </p>
-          <form action="" method="get">
-            <input id="nome" type="text" name="nome" placeholder="Nome" />
-            <input id="email" type="email" name="email" placeholder="Email"/>
-            <select name="place" id="">
+         <form action="https://gmail.us20.list-manage.com/subscribe/post?u=7b1cd02d7d01e98af5da5fcb9&amp;id=5daea35b7d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <input id="nome" type="text" name="FNAME" placeholder="Nome" />
+            <input id="email" type="email" name="EMAIL" placeholder="Email"/>
+            <select name="PLACE" id="">
               <option value="Rj">Rio de janeiro</option> <option value="Mg">Minas gerias</option>
               <option value="Sp">São paulo</option>
               <option value="Es">Espirito santo</option>
             </select>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7b1cd02d7d01e98af5da5fcb9_5daea35b7d" tabindex="-1" value=""></div>
             <input type="submit" value="INSCREVER-SE">
           </form> 
       </section>
